validatingwebhookconfiguration-app.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: cerebrum-system/cerebrum-serving-cert
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{"cert-manager.io/inject-ca-from":"cerebrum-system/cerebrum-serving-cert"},"labels":{"app.kubernetes.io/component":"webhook","app.kubernetes.io/created-by":"cerebrum","app.kubernetes.io/instance":"validating-webhook-configuration","app.kubernetes.io/managed-by":"kustomize","app.kubernetes.io/name":"validatingwebhookconfiguration","app.kubernetes.io/part-of":"cerebrum"},"name":" [...]
  creationTimestamp: "2024-02-12T11:59:01Z"
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: cerebrum
    app.kubernetes.io/instance: validating-webhook-configuration
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: validatingwebhookconfiguration
    app.kubernetes.io/part-of: cerebrum
  name: cerebrum-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-core-cerebrum-juniper-net-v1-bgppeer
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vbgppeer.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - core.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - bgppeers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-core-cerebrum-juniper-net-v1-bgprouter
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vbgprouter.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - core.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - bgprouters
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-core-cerebrum-juniper-net-v1-bgproutergroup
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vbgproutergroup.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - core.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - bgproutergroups
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-core-cerebrum-juniper-net-v1-evpn
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vevpn.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - core.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - evpns
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-core-cerebrum-juniper-net-v1-interface
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vinterface.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - core.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - interfaces
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-core-cerebrum-juniper-net-v1-pool
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vpool.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - core.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - pools
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-core-cerebrum-juniper-net-v1-routinginstance
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vroutinginstance.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - core.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - routinginstances
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-crpd-cerebrum-juniper-net-v1-configlet
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vconfiglet.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - crpd.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - configlets
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-crpd-cerebrum-juniper-net-v1-crpd
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vcrpd.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - crpd.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - crpds
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-crpd-cerebrum-juniper-net-v1-crpdgroup
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vcrpdgroup.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - crpd.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - crpdgroups
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-security-cerebrum-juniper-net-v1-csrx
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vcsrx.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - security.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - csrxes
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-security-cerebrum-juniper-net-v1-securegateway
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vsecuregateway.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - security.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - securegateways
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-security-cerebrum-juniper-net-v1-servicechain
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vservicechain.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - security.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - servicechains
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lSQUsxdnhXaU40b3hMUjBjbkNySU9lYW93RFFZSktvWklodmNOQVFFTEJRQXcKQURBZUZ3MHlOREF5TVRJeE1UVTVNREZhRncweU5EQTFNVEl4TVRVNU1ERmFNQUF3Z2dFaU1BMEdDU3FHU0liMwpEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUR5N1Y5NW5hZ2lqS0RyQlRndlhOR2ZFMkZnbWdnVUNxZ2R2S3Y5CmRoWnJzeWtoVGx4bDRYenFoc2hhUHRtcU1WYmlrNEJqMzhNQlN0a2RsR0dmcVhrNkZkaXh2Mzk5dUd1QVlmc0cKTCtjRk1MUlY1MEFqQlZsNGNzeUR3SWd5anNsWlNHNVIwajFkSHZib0xCbmNuL21RUFd1RGZsZEJjandaWEs4RgpSSnl4R0F1RDIvTH [...]
    service:
      name: cerebrum-webhook-service
      namespace: cerebrum-system
      path: /validate-workflow-cerebrum-juniper-net-v1-vpcgateway
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vvpcgateway.kb.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - workflow.cerebrum.juniper.net
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - vpcgateways
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
